fix side tracks on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,11 @@
 @import 'mixins';
 
 .container {
+	margin: 0;
 	padding: 0 2rem;
+	@media (max-width: 767px) {
+		padding: 0;
+	}
 }
 
 .main {
